--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "application-name",
+  "name": "bailey-bike-park",
   "version": "1.0.0",
-  "description": "Application description.",
+  "description": "Personnel management.",
   "scripts": {
     "start": "meteor --settings settings-development.json",
     "staging": "meteor deploy staging.meteor.com --settings settings-development.json",
